// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner component should match snapshot 1`] = `
<div>
  <div
    class="css-1qxp57m-Banner"
  >
    <i
      class="material-icons css-1q3mgzl-Banner"
    >
      info
    </i>
    <div
      class="css-hu5ugq-Banner"
    >
      <div
        class="css-1s3pmdg-Text"
      >
        banner
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner component should match snapshot when all props are populated 1`] = `
<div>
  <div
    class="css-1uzbnv-Banner"
  >
    <i
      class="material-icons css-1vuensh-Banner"
    >
      accessibility
    </i>
    <div
      class="css-hu5ugq-Banner"
    >
      <div
        class="css-1s3pmdg-Text"
      >
        banner
      </div>
    </div>
  </div>
</div>
`;
